--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <body><div id="container">
         <div id="title">
 
-            <a href="index.html"> <i>SANS</i> <a href="page4.html"> कृति  </a>
+            <a href="page4.html"> <i>SANS</i> <a href="index.html"> कृति  </a>
         </div>
         <div id="handwritten">
             A family archive <b>
